tweak min height for main (wave gap fix?)

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -11,7 +11,7 @@
 
 .inversecolorscheme main {
  padding-top: 2em;
- min-height: 500px;}
+ min-height: 600px;}
 
 .inversecolorscheme main a, .inversecolorscheme footer a {
     color: $info; 
